--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,10 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3307/vet_app_db
     username: root
-    password: 2222
+    password: 12345
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
 
 server:
