--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,13 +3,16 @@ spring:
   application:
     name: vetApp
   datasource:
-    url: jdbc:mysql://localhost:3307/vet_app_db
-    username: root
-    password: 12345
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 
 server:
   port: 9000
